@@ -5,7 +5,7 @@ import xyz.hardliner.calc.operands.Operand;
 import xyz.hardliner.calc.service.ApplicableCheck;
 import xyz.hardliner.calc.service.Item;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Stack;
 import java.util.function.Function;
@@ -28,10 +28,10 @@ public class Undo implements SpecialOperator {
 
     public static Function<List<Item>, List<Item>> undoResolvingRule() {
         return items -> {
-            var itemsEffectiveCopy = new ArrayList<Item>();
+            var itemsEffectiveCopy = new LinkedList<Item>();
             for (Item item : items) {
                 if (!itemsEffectiveCopy.isEmpty() && item instanceof Undo) {
-                    itemsEffectiveCopy.remove(itemsEffectiveCopy.size() - 1);
+                    itemsEffectiveCopy.removeLast();
                 } else itemsEffectiveCopy.add(item);
             }
             return itemsEffectiveCopy;
